--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
     "@material-ui/core": "4.8.2",
     "@material-ui/icons": "4.5.1",
     "@reach/router": "1.2.1",
+    "@types/classnames": "2.2.9",
     "@types/jest": "24.0.25",
     "@types/node": "12.12.21",
     "@types/reach__router": "1.2.6",
     "@types/react": "16.9.17",
     "@types/react-dom": "16.9.4",
+    "axios": "0.19.0",
     "babel-plugin-import": "1.13.0",
+    "classnames": "2.2.6",
     "customize-cra": "0.9.1",
     "husky": "3.1.0",
+    "isemail": "3.2.0",
     "lint-staged": "9.5.0",
     "md2wx": "3.0.0",
     "normalize.css": "8.0.1",
@@ -31,7 +35,9 @@
     "react-dom": "16.12.0",
     "react-helmet": "5.2.1",
     "react-scripts": "3.3.0",
+    "react-spring": "8.0.27",
     "source-map-explorer": "2.2.1",
+    "swr": "0.1.16",
     "typescript": "3.7.4"
   },
   "husky": {
