--- a/package.json
+++ b/package.json
@@ -13,13 +13,12 @@
   "dependencies": {
     "@material-ui/core": "4.9.0",
     "@material-ui/icons": "4.5.1",
-    "@reach/router": "1.2.1",
     "@types/classnames": "2.2.9",
     "@types/jest": "25.1.0",
     "@types/node": "13.5.1",
-    "@types/reach__router": "1.2.6",
     "@types/react": "16.9.19",
     "@types/react-dom": "16.9.5",
+    "@types/react-router-dom": "5.1.3",
     "axios": "0.19.2",
     "babel-plugin-import": "1.13.0",
     "classnames": "2.2.6",
@@ -34,6 +33,7 @@
     "react-app-rewired": "2.1.5",
     "react-dom": "16.12.0",
     "react-helmet": "5.2.1",
+    "react-router-dom": "5.1.2",
     "react-scripts": "3.3.0",
     "react-spring": "8.0.27",
     "source-map-explorer": "2.2.2",
